Add google fonts: Poppin, Add navbar and header

--- a/index.html
+++ b/index.html
@@ -5,14 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fragranesia</title>
+    <!-- Google Fonts - Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet" />
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Navbar -->
+    <nav>
+      <div class="nav-logo-container">
+        <h4><span class="red-text">Fragra</span>nesia</h4>
+      </div>
+      <div class="nav-link-container">
+        <div class="nav-link"><h4>Beranda</h4></div>
+        <div class="nav-link"><h4>Tentang Kami</h4></div>
+        <div class="nav-link"><h4>Produk</h4></div>
+      </div>
+    </nav>
     <!-- End of Navbar -->
 
     <!-- Header -->
+    <header>
+      <!-- Background -->
+      <img src="/assets/header-background.png" alt="header background" />
+      <div class="heading-container">
+        <h1>Selamat Datang di <span class="red-text">Fragra</span>nesia</h1>
+        <h2>Tingkatkan kepercayaan diri kalian dengan berbagai macam variasi aroma parfum Fragranesia!</h2>
+        <button>Lihat <span class="orange-text">Parfum</span></button>
+      </div>
+    </header>
     <!-- End of Header -->
 
     <!-- Tentang Kami -->
