Add Tentang Kami section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <header>
       <!-- Background -->
       <img src="/assets/header-background.png" alt="header background" />
+
       <div class="heading-container">
         <h1>Selamat Datang di <span class="red-text">Fragra</span>nesia</h1>
         <h2>Tingkatkan kepercayaan diri kalian dengan berbagai macam variasi aroma parfum Fragranesia!</h2>
@@ -39,9 +40,35 @@
     <!-- End of Header -->
 
     <!-- Tentang Kami -->
+    <section class="tentang-kami-container">
+      <img src="/assets/tentang-kami-background.png" alt="Tentang Kami Background" class="tentang-kami-background" />
+      <div class="tentang-kami-text">
+        <div class="left-text">
+          <h3>Siapa <span class="red-text">Kami</span></h3>
+          <p>
+            Fragranesia adalah sebuah tim bersemangat yang terdiri dari ahli parfum, peneliti aroma, dan pecinta seni aromaterapi. Kami telah menjalani perjalanan yang panjang untuk menggali rahasia aroma dan memahami bagaimana mereka dapat
+            memengaruhi perasaan, pikiran, dan ingatan.
+          </p>
+        </div>
+        <div class="right-text">
+          <h3><span class="red-text">Kami</span> Peduli dengan <span class="orange-text">Kualitas</span></h3>
+          <p>
+            Kualitas adalah landasan dari segala yang kami lakukan. Kami hanya menggunakan bahan-bahan berkualitas tertinggi dan proses pembuatan yang teliti untuk memastikan bahwa setiap parfum yang kami tawarkan memenuhi standar
+            tertinggi.
+          </p>
+        </div>
+      </div>
+      <div class="bottom-text">
+        <p>
+          Misi kami adalah untuk membawa keindahan dan keunikan aroma ke dalam kehidupan sehari-hari Anda. Kami mencurahkan waktu, energi, dan dedikasi untuk merumuskan parfum yang tidak hanya memikat indera penciuman Anda, tetapi juga
+          memberikan pengalaman emosional yang mendalam.
+        </p>
+      </div>
+    </section>
     <!-- End of Tentang Kami -->
 
     <!-- Produk Kami -->
+    
     <!-- End of Produk Kami -->
 
     <!-- Footer -->
