Add section Produk Kami, Hubungi Kami and Footer

--- a/index.html
+++ b/index.html
@@ -68,10 +68,67 @@
     <!-- End of Tentang Kami -->
 
     <!-- Produk Kami -->
-    
+    <section class="produk-kami-container">
+      <img src="/assets/produk-kami-background.png" alt="Produk Kami Background" class="produk-kami-background" />
+      <div class="produk-kami-heading">
+        <h1>Produk <span class="red-text">Kami</span></h1>
+      </div>
+      <div class="produk-card-container">
+        <div class="produk-card">
+          <img src="/assets/produk-aquatic.png" alt="Produk Aquatic" />
+          <h3 class="top-heading">Aquatic</h3>
+          <p>Aroma segar dan bersih yang terinspirasi oleh air dan laut</p>
+          <h3 class="bottom-heading">100ml</h3>
+        </div>
+        <div class="produk-card">
+          <img src="/assets/produk-extrait.png" alt="Produk Aquatic" />
+          <h3 class="top-heading">Extrait</h3>
+          <p>Parfum murni dengan konsentrasi tertinggi, sangat tahan lama</p>
+          <h3 class="bottom-heading">30ml</h3>
+        </div>
+        <div class="produk-card">
+          <img src="/assets/produk-woody.png" alt="Produk Aquatic" />
+          <h3 class="top-heading">Woody</h3>
+          <p>Memiliki aroma kayu seperti cedarwood, sandalwood, atau patchouli</p>
+          <h3 class="bottom-heading">50ml</h3>
+        </div>
+      </div>
+    </section>
     <!-- End of Produk Kami -->
 
+    <!-- Hubungi Kami -->
+    <section class="hubungi-kami-container">
+      <img src="/assets/hubungi-kami-background.png" alt="Contact Us Background" class="hubungi-kami-background" />
+      <div class="text-and-button">
+        <h1>Info Detail Pemesanan</h1>
+        <button>Hubungi Kami</button>
+      </div>
+    </section>
+    <!-- End of Hubungi Kami -->
     <!-- Footer -->
+    <footer>
+      <div class="footer-content-container">
+        <div class="footer-info">
+          <h3 class="footer-logo"><span class="red-text">Fragra</span>nesia</h3>
+          <p>Jl. Pangeran Jayakarta No 12 Jakarta Selatan 17125</p>
+          <h6>© Fragranesia 2023</h6>
+        </div>
+        <div class="footer-nav">
+          <a href="/index.html">Beranda</a>
+          <a href="/index.html">Tentang Kami</a>
+          <a href="/index.html">Produk</a>
+        </div>
+        <div class="footer-socmed">
+          <h6>Connect with Us</h6>
+          <div class="socmed-icon">
+            <a href="https://www.instagram.com/"><img src="/assets/instagram-icon.png" alt="Instagram Icon" /></a>
+            <a href="https://www.facebook.com/"><img src="/assets/facebook-icon.png" alt="Facebook Icon" /></a>
+            <a href="https://www.youtube.com/"><img src="/assets/youtube-icon.png" alt="Youtube Icon" /></a>
+          </div>
+          <h6>info@fragranesia.com</h6>
+        </div>
+      </div>
+    </footer>
     <!-- End of Footer -->
   </body>
 </html>
