--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <div class="heading-container">
           <h1>Selamat Datang di <span class="red-text">Fragra</span>nesia</h1>
           <h2>Tingkatkan kepercayaan diri kalian dengan berbagai macam variasi aroma parfum Fragranesia!</h2>
-          <button><a href="#produk"></a>Lihat <span class="orange-text">Parfum</span></button>
+          <a href="#produk">
+            <button>Lihat <span class="orange-text">Parfum</span></button>
+          </a>
         </div>
       </header>
       <!-- End of Header -->
@@ -103,7 +105,7 @@
     <section class="hubungi-kami-container">
       <div class="text-and-button">
         <h1>Info Detail Pemesanan</h1>
-        <button>Hubungi Kami</button>
+        <button onclick="redirectToWhatsApp()">Hubungi Kami</button>
       </div>
     </section>
     <!-- End of Hubungi Kami -->
@@ -132,5 +134,6 @@
       </div>
     </footer>
     <!-- End of Footer -->
+    <script src="script.js"></script>
   </body>
 </html>
