--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <!-- Navbar -->
       <nav>
         <div class="nav-logo-container">
-          <h4><span class="red-text">Fragra</span>nesia</h4>
+          <a href="/index.html">
+            <h4><span class="red-text">Fragra</span>nesia</h4>
+          </a>
         </div>
         <div class="nav-link-container">
           <div class="nav-link">
@@ -113,7 +115,9 @@
     <footer>
       <div class="footer-content-container">
         <div class="footer-info">
-          <h3 class="footer-logo"><span class="red-text">Fragra</span>nesia</h3>
+          <a href="/index.html">
+            <h3 class="footer-logo"><span class="red-text">Fragra</span>nesia</h3>
+          </a>
           <p>Jl. Pangeran Jayakarta No 12 Jakarta Selatan 17125</p>
           <h6>© Fragranesia 2023</h6>
         </div>
